--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,17 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
     compileSdk 32
+
+    buildFeatures{
+        viewBinding{
+            enabled=true
+        }
+    }
 
     defaultConfig {
         applicationId "com.example.stockapplication"
@@ -33,10 +40,55 @@ android {
 
 dependencies {
 
+    def kotlinx_v = "1.6.2"
+    def okHttp_v = "4.9.3"
+    def retrofit_v = "2.9.0"
+    def dagger_v = "2.42"
+    def lifecycle_v = "2.4.0"
+    def cicerone_v = "7.1"
+    def binding_delegate_v = "1.5.6"
+    def delegate_adapter_version = "4.3.2"
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.fragment:fragment-ktx:1.4.1'
+
+    //kotlinx
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinx_v"
+
+    //okHttp
+    implementation "com.squareup.okhttp3:okhttp:$okHttp_v"
+
+    //dagger
+    implementation "com.google.dagger:dagger:$dagger_v"
+    kapt "com.google.dagger:dagger-compiler:$dagger_v"
+
+    //lifecycle
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_v"
+
+    //retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_v"
+    implementation "com.squareup.retrofit2:converter-moshi:$retrofit_v"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_v"
+    implementation "com.squareup.okhttp3:okhttp:$okHttp_v"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okHttp_v"
+
+    //cicerone
+    implementation "com.github.terrakok:cicerone:$cicerone_v"
+
+    //binding
+    implementation "com.github.kirich1409:viewbindingpropertydelegate:$binding_delegate_v"
+    implementation "com.github.kirich1409:viewbindingpropertydelegate-noreflection:$binding_delegate_v"
+
+    //delegateAdapter
+    implementation "com.hannesdorfmann:adapterdelegates4-kotlin-dsl:$delegate_adapter_version"
+    implementation "com.hannesdorfmann:adapterdelegates4-kotlin-dsl-viewbinding:$delegate_adapter_version"
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
